Use IdentityHashSet for MapEvaluator